--- a/style.css
+++ b/style.css
@@ -7,12 +7,21 @@ header{
     color:rgb(91, 66, 122);
     margin-bottom: 50px;
 }
-li{
+h2{
+    font-family: Arial, Helvetica, sans-serif;
+    letter-spacing: 2px;
+}
+.projects{
+    margin-left: 100px;
+}
+h6{
     font-size: 20px;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    letter-spacing: 2px;
 }
 a{
-    color:black;
+    transition: color .3s;
 }
 a:visited{
     color:rgb(118, 65, 167);
