--- a/style.css
+++ b/style.css
@@ -16,14 +16,19 @@ h2{
     margin:0 auto;
     display:grid;
     grid-template-columns: 1fr 1fr;
-    gap:10px;
+    gap:15px;
 }
 h6{
     font-size: 20px;
-    margin-bottom: 20px;
     font-family: Arial, Helvetica, sans-serif;
     letter-spacing: 2px;
 }
 a{
     color:rgb(118, 65, 167);
+}
+@media only screen and (max-width:800px) {
+    .projects{
+        width:95%;
+        grid-template-columns: 1fr;
+    }
 }
